--- a/style.css
+++ b/style.css
@@ -1,18 +1,32 @@
-html body{
-    width: 100%;
-    height: 100%;
+html, body {
     margin: 0;
     padding: 0;
-}
-div.main {
-    width: 100%;
     height: 100%;
-    background-image: url("img/header_background.jpeg");
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-p.main {
-    font-size: clamp(16px, 5vw, 82px);
-    color: white;
+    width: 100%;
 }
 
+body {
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    color: white;
+    font-family: Arial, sans-serif;
+}
+
+#div_main {
+    width: 100%;
+    height: 100%;
+    background: url("img/header_background.jpeg") no-repeat center center fixed;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#p_main {
+    margin: 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    font-size: 72px;
+    text-align: center;
+    color: white;
+}
