--- a/style.css
+++ b/style.css
@@ -24,9 +24,13 @@ body {
 }
 
 #p_main {
+    padding: 30px;
     margin: 20px;
     background-color: rgba(0, 0, 0, 0.5);
     font-size: 72px;
     text-align: center;
     color: white;
+    font-size: 1.5em;
+    max-width: 80%; 
+    line-height: 1.6;
 }
