--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 #div_main {
     width: 100%;
     height: 100%;
-    background: url("img/header_background.jpeg") no-repeat center center fixed;
+    background: url("../img/header_background.jpg") no-repeat center center fixed;
     background-size: cover;
     display: flex;
     justify-content: center;
