--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
     font-family: Arial, sans-serif;
 }
 
-#div_main {
+#d_main {
     width: 100%;
     height: 100%;
     background: url("../img/header_background.jpg") no-repeat center center fixed;
@@ -46,12 +46,14 @@ iframe.rest {
     width: 100%;
 }
 
-/* El h1 que tiene como fuente la de Google Font */
+/* El h1 que tiene como fuente la de Google Font, es la fuente más cercana que encontré*/
 #G_FONT {
     font-family: "Emblema One", system-ui;
 }
 
 
+/* Media Queries */
+/* Preguntarle al Alberto si es suficiente */
 @media (max-width: 768px) {
     #p_main {
         font-size: 1.8em;
@@ -99,10 +101,10 @@ tr:nth-child(even) {
     background-color: #333333;
 }
   
-tr:hover {
+tr:hover { 
     background-color: #444444;
     cursor: pointer;
-}
+} /* Porque lo ví por ahí y porque no ponerlo */
   
 caption {
     font-size: 1.5rem;
